unpackaged/objects/GymEvent__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Distance_m__c</fullName>
        <label>Distance (m)</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>0</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <description>Month of the Year</description>
        <formula>Month(Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SwimType__c</fullName>
        <label>SwimType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pool 25m</fullName>
                    <default>true</default>
                    <label>Pool 25m</label>
                </value>
                <value>
                    <fullName>Pool 50m</fullName>
                </value>
                <value>
                    <fullName>Open Water</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Swimming</fullName>
                    <default>true</default>
                    <label>Swimming</label>
                </value>
                <value>
                    <fullName>Running</fullName>
                </value>
                <value>
                    <fullName>Cycling</fullName>
                </value>
                <value>
                    <fullName>Workout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Workout_details__c</fullName>
        <label>Workout details</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>GymEvent</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>GymEvent ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GymEvents</pluralLabel>
    <recordTypes>
        <fullName>Gym</fullName>
        <active>true</active>
        <label>Gym</label>
    </recordTypes>
    <recordTypes>
        <fullName>Swim</fullName>
        <active>true</active>
        <label>Swim</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CheckEventDate</fullName>
        <active>true</active>
        <description>Event date can&apos;t be in the future</description>
        <errorConditionFormula>Date__c  &gt;  TODAY()</errorConditionFormula>
        <errorMessage>Event date can&apos;t be in the future</errorMessage>
    </validationRules>
</CustomObject>